Thu Mar 19 06:17:59 1998  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* Makefile.in (toplev.o): Depend on Makefile.

Wed Mar 18 17:40:09 1998  Michael P. Hayes  <michaelh@ongaonga.chch.cri.nz>

	* expr.c (convert_move): Add [QH]Imode/P[QH]Imode conversions.
	* machmode.def (PQImode, PHImode): New modes.

Wed Mar 18 17:11:18 1998  Andreas Schwab  <schwab@issan.informatik.uni-dortmund.de>

	* m68k.md (movsf+1): Optimize moving a CONST_DOUBLE zero.

Wed Mar 18 17:07:54 1998  Ken Raeburn  <raeburn@cygnus.com>

	* regclass.c (init_reg_sets): Delete init of reg-move cost tables.
	(init_reg_sets_1): Put it here.

Wed Mar 18 16:43:11 1998  Jim Wilson  <wilson@cygnus.com>

	* i960.md (tablejump): Handle flag_pic.

	* profile.c (branch_prob): If see computed goto, call fatal.

	* calls.c (expand_call): Fix typos in n_named_args computation.

Wed Mar 18 05:54:25 1998  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* fold-const.c (operand_equal_for_comparison_p): See if equal
	when nop conversions are removed.

	* expr.c (expand_expr, case COND_EXPR): If have conditional move,
	don't use ORIGINAL_TARGET unless REG.

	* function.c (fixup_var_refs_insns): Also delete insn storing pseudo
	back into arg list.

	* combine.c (gen_binary): Don't make AND that does nothing.
	(simplify_comparison, case AND): Commute AND and SUBREG.
	* i386.h (CONST_CONSTS, case CONST_INT): One-byte integers are cost 0.

Mon Mar 16 15:57:17 1998  Geoffrey Keating  <geoffk@ozemail.com.au>

	* rs6000.c (small_data_operand): Ensure any address referenced
	relative to small data area is inside SDA.

Sun Mar 15 16:01:19 1998  Andrew Pochinsky  <avp@ctp.mit.edu>

	* sparc.h (ASM_OUTPUT_LOOP_ALIGN): Write nop's.

Sun Mar 15 15:53:39 1998  Philippe De Muyter  <phdm@macqel.be>

	* libgcc2.c (exit): Don't call __bb_exit_func if HAVE_ATEXIT.

Sun Mar 15 15:44:41 1998  Paul Eggert  <eggert@twinsun.com>

	* cccp.c: Fix bugs relating to NUL in input file name,
	e.g. with `#line 2 "x\0y"'.